// Vitest Snapshot v1

exports[`PasswordReset > matches snapshot in en 1`] = `
<div
  class="password-reset"
  data-v-d0420da1=""
>
  <h1
    data-v-d0420da1=""
  >
    Enter your new password.
  </h1>
  
  
  <form
    class="form auth-form"
    data-v-d0420da1=""
    novalidate=""
  >
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Enter password
      </label>
      <input
        name="password"
        type="password"
      />
      <!---->
    </div>
    <div
      class="field confirm-password"
    >
      <label
        for="confirm-password"
      >
        Re-enter password
      </label>
      <input
        name="confirmation"
        type="password"
      />
      <!---->
    </div>
    <div
      class="submit"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Change Password
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
</div>
`;

exports[`PasswordReset > matches snapshot in fr 1`] = `
<div
  class="password-reset"
  data-v-d0420da1=""
>
  <h1
    data-v-d0420da1=""
  >
    Réinitialisation de votre mot de passe
  </h1>
  
  
  <form
    class="form auth-form"
    data-v-d0420da1=""
    novalidate=""
  >
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Nouveau mot de passe
      </label>
      <input
        name="password"
        type="password"
      />
      <!---->
    </div>
    <div
      class="field confirm-password"
    >
      <label
        for="confirm-password"
      >
        Confirmation de votre nouveau mot de passe
      </label>
      <input
        name="confirmation"
        type="password"
      />
      <!---->
    </div>
    <div
      class="submit"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Modifier votre mot de passe
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
</div>
`;
